[project]
name = "robottemplate"
version = "0.1.0"
description = "python rpa flow template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "pendulum",
    "loguru",
    "brkrpautils",
    "os2apwrapper",
    "topdeskpy",
]

[tool.uv]
dev-dependencies = [
  "ruff",
  "ipykernel",
  "ipython",
]

[tool.uv.sources]
brkrpautils = { git = "https://github.com/BorholmsRegionsKommuneIT/brkrpautils" }
os2apwrapper = { git = "https://github.com/BorholmsRegionsKommuneIT/os2apwrapper" }
topdeskpy = { git = "https://github.com/BorholmsRegionsKommuneIT/topdeskpy" }

[tool.ruff]
line-length = 240
